correct align

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -202,7 +202,7 @@ ol {
     }
     .scblog-title {
       padding: 0.5em;
-      font-size: 20px;
+      font-size: 19px;
       font-weight: bold;
     }
     .scblog-date {
